<?xml version="1.0"?>
<package format="2">
  <name>parking_lot</name>
  <version>0.0.1</version>
  <description>Parking lot package ported to ROS 2</description>

  <maintainer email="henricus@todo.todo">henricus</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
